# cfworker-daily-challenge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README_EN.md  default.nix  flake.nix  wrangler.toml
.github/workflows/: checks.yml  deploy.yml
src/: cangrebot.rs  challenge.rs  daily.rs  lib.rs
