[package]
name = "daily-challenges"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest = "0.11.27"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
time = "0.3.34"
worker = "0.0.21"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
