[package]
name = "daily-challenges"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.0.21"
serde_json = "1.0.114"
reqwest = { version = "0.11.27", features = ["json"] }
time = { version = "0.3.34", features = ["wasm-bindgen"] }
serde = { version = "1.0.197", features = ["serde_derive"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
